...
            <point key="canvasLocation" x="-713" y="-270"/>
        </scene>
        <!--Home-->
        <scene sceneID="Yqb-q2-noB">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBottomBarWhenPushed="YES" id="qEB-fP-hyi" customClass="BaseNavController" customModule="Assignment_1" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="icon_home_nor" selectedImage="icon_home_sel" id="271-i0-BnJ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xtL-iz-IgK">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="236" y="-753"/>
        </scene>
        <!--Like-->
        <scene sceneID="OzN-7c-iog">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gzL-i7-exA" customClass="BaseNavController" customModule="Assignment_1" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Like" image="icon_like_nor" selectedImage="icon_like_sel" id="kUS-1N-cPR"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUk-Ve-Aoc">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="1029.5999999999999" y="794.75262368815595"/>
        </scene>
        <!--Plan-->
        <scene sceneID="BYD-6I-0aI">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="loj-kJ-bIK" customClass="BaseNavController" customModule="Assignment_1" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Plan" image="icon_planner_nor" selectedImage="icon_planner_sel" id="Sua-ab-p7K"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="G7Q-3n-UbE">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="HDN-y3-Ce8" id="p7z-FV-x42"/>
                            <outlet property="delegate" destination="HDN-y3-Ce8" id="Pkw-ay-pAs"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Recipes" id="WyM-17-mo1">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Uhj-xe-GLm">
                            <connections>
                                <segue destination="Ssc-ja-nOw" kind="presentation" identifier="AddItem" id="eFE-Ah-xpt"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                    <navigationItem key="navigationItem" title="New Recipe" id="TPu-yo-jj8">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="4mk-4c-0yI">
                            <connections>
                                <action selector="Cancel:" destination="179-cS-gOt" id="HhK-5V-3Mf"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="tkv-wK-otB">
                            <connections>
                                <segue destination="VdB-rK-8vA" kind="unwind" unwindAction="unwindToMealListWithSender:" id="NTm-T9-xnE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            <point key="canvasLocation" x="143" y="1635"/>
        </scene>
        <!--Me-->
        <scene sceneID="Pke-Yb-YUR">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6uG-We-Vpq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Me" image="icon_me_nor" selectedImage="icon_me_sel" id="6u8-Af-ZhU"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ekV-Ra-uca">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
