...
            action in
            
            let recipes = DinnerManager.shareSingleManager.dailyPlanFood as! [Recipe]
            
            for tmpRecipe:Recipe in recipes{
                if(self.recipe?.name == tmpRecipe.name){
                    let alert = UIAlertController.init(title: "Add", message: "repetition add", preferredStyle: .alert)
                    let cancelAction = UIAlertAction.init(title: "Cancle", style: .cancel, handler: nil)
                    alert.addAction(cancelAction)
                    self.present(alert, animated: true, completion: nil)
                    return
                }
            }
...
